# os_labs

./: .gitignore  CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
CP/doc/: 215_Лапенко_КП.docx
lab1/doc/: 215_Лапенко_Лаб1.docx  protocol.txt  starce.txt
lab1/src/: child1  child1.c  child2  child2.c  parent  parent.c
lab2/doc/: 215_Лапенко_Лаб2.docx  lab2.txt  slab2.txt
lab2/src/: main.cpp  monitor_threads.sh  test_det.sh  test_determinant.sh
lab3/doc/: 215_Лапенко_Лаб3.docx  slab3.txt
lab3/src/: Makefile  child1.cpp  child2.cpp  common.h  parent.cpp
lab4/doc/: 215_Лапенко_Лаб4.docx  lab41.txt  lab42.txt  sp1.txt  sp2.txt
lab4/src/: Makefile  area_rect.cpp  area_triangle.cpp  library1.cpp  library1.h  library2.cpp  prime_erat.cpp  prime_naive.cpp  program1  program1.cpp  program2  program2.cpp
lab5-7/: CMakeLists.txt
lab5-7/doc/: 215_Лапенко_Лаб5-7.docx
lab5-7/src/: child.cpp  control.cpp  message.h  nodes.h  parent.cpp
lab8/: 215_Лапенко_Лаб8.docx
